# odoo-amalthea-hackathon-code-crafters

./: README.md  adminpage.html  app.js  dashbaord.html  frontpage.html  ind.html  index.html  manager.html  requirements.txt
backend/: crud.py  database.py  main_backend.py  run.py  schemas.py
expense-mgr-backend/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
expense-mgr-backend/app/: __init__.py  auth.py  config.py  crud.py  database.py  deps.py  email_utils.py  main.py  models.py  run.PY  schemas.py  utils.py
expense-mgr-backend/app/migrations/: env.py
expense-mgr-backend/app/routers/: __init__.py  admin.py  approvals.py  auth.py  currency.py  expenses.py  integrations.py  users.py
expense-mgr-backend/app/routes/: currency_router.py
expense-mgr-backend/app/services/: analytics.py  currency_service.py
expense-mgr-backend/app/tests/: test_models.py
expense-mgr-frontend/: index.html
