[tool.poetry]
name = "expense-mgr-backend"
version = "0.1.0"
description = "Expense Management System Backend"
authors = ["Your Name <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
requests = "^2.32.3"
pydantic-settings = "^2.5.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.13.2"
psycopg2-binary = "^2.9.9"  # For PostgreSQL support if needed
email-validator = "^2.2.0"  # For email validation (optional with mobile focus)
twilio = "^8.10.0"  # Optional, for real SMS integration with mobile reset

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"  # For testing
black = "^23.7.0"  # Code formatting
flake8 = "^6.0.0"  # Linting
isort = "^5.12.0"  # Import sorting

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"